[project]
name = "x-engage"
version = "0.1.0"
description = "Engagement Analyzer & Discord Reporter for X/Twitter posts"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
